--- a/TalentMatch.Application/TalentMatch.Application.csproj
+++ b/TalentMatch.Application/TalentMatch.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\TalentMatch.Domain\TalentMatch.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\JobApplication\Command\" />
+  </ItemGroup>
+
 </Project>
