--- a/TalentMatch.API/appsettings.json
+++ b/TalentMatch.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "super_secret_key_12345",
+    "Issuer": "TalentMatch",
+    "Audience": "TalentMatchUsers"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
